--- a/src/Resources.resx
+++ b/src/Resources.resx
@@ -127,4 +127,7 @@
   <data name="glslVariables" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\glslVariables.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="LICENSE" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\LICENSE.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
